--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 .App {
   text-align: center;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height:300px;
 }
 
 .App-logo {
@@ -22,6 +26,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.App-input {
+  font-size: calc(10px + 2vmin);
 }
 
 .App-link {
